--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,15 @@ body {
   background-color: #34495e;
 }
 
-.checked.todo-item {
+.button-wrapper {
+  background-color: #273b50;
+}
+
+
+/* .checked.todo-item {
   font-style: italic;
   text-decoration: line-through;
-}
+} */
 
 .js-check {
   cursor: pointer;
